# qazer

./: Cargo.toml  README.md
.github/workflows/: snapshot.yml
src/: bot.rs  main.rs  repo.rs  tencent.rs  watch.rs
src/bot/: change.rs  clients.rs  cmd.rs  logic.rs
src/repo/: model.rs  redb.rs
src/tencent/: client.rs  error.rs  model.rs  progress.rs
