[package]
name = "qazer"
version = "0.1.0"
edition = "2021"

[dependencies]
redb = "2.4.0"
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "2.13.0"
reqwest = { version = "0.12", features = ["json", "cookies"] }
log = "0.4.26"
